feat(release-it): 🧹 update to modern writer logic
- Remove commitlint from Husky hooks and package.json
- Update release-it hooks format for consistency

--- a/scripts/release-it/templates/commit.hbs
+++ b/scripts/release-it/templates/commit.hbs
@@ -7,9 +7,9 @@
 {{~/if}}
 
 {{~#if @root.linkReferences}}
- [{{shortHash}}]({{commitUrlFormat}})
+ - [{{shortHash}}]({{commitUrlFormat}})
 {{~else}}
- {{shortHash}}
+ - {{shortHash}}
 {{~/if}}
 
 {{~!-- commit author details --}}
