--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,9 +1,30 @@
-@import "https://use.typekit.net/oaf3qkb.css" layer(base);
+@import "https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap";
 
 @import "tailwindcss";
 
-@config "../../tailwind.config.js";
+@layer base {
+	* {
+		text-wrap: pretty;
+	}
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		text-wrap: balance;
+	}
+}
 
 @theme {
-	--font-sans: "tenon", "sans-serif";
+	--font-sans: "Inter", "sans-serif";
+}
+
+@utility inter-display {
+	font-optical-sizing: auto;
+}
+
+@utility optimize-legibility {
+	text-rendering: optimizelegibility;
 }
